feat: Support rendering with Graphviz (#18)