@@ -140,7 +140,7 @@
         <artifactId>maven-surefire-plugin</artifactId>
         <version>2.22.2</version>
         <configuration>
-          <argLine>@{argLine} -Dfile.encoding=UTF-8 --illegal-access=permit</argLine>
+          <argLine>@{argLine} -Dfile.encoding=UTF-8</argLine>
           <runOrder>random</runOrder>
         </configuration>
       </plugin>
